# pkg/pb/notification.swagger.json
@@ -17,7 +17,7 @@
   "paths": {
     "/v1/hello": {
       "post": {
-        "summary": "Sends a greeting",
+        "summary": "#API 0.SayHello:gRPC testing,Sends a greeting.",
         "operationId": "SayHello",
         "responses": {
           "200": {
@@ -98,7 +98,7 @@
     },
     "/v1/nf/CreateNfWaddrs": {
       "post": {
-        "summary": "create nf with addrs(email addrs, phone numbers)",
+        "summary": "#API 1.CreateNfWaddrs：create nf with addrs(email addrs, phone numbers).",
         "operationId": "CreateNfWaddrs",
         "responses": {
           "200": {
@@ -125,7 +125,7 @@
     },
     "/v1/nf/DescribeNfs": {
       "post": {
-        "summary": "describe Notification with filter",
+        "summary": "#API 2.DescribeNfs:describe single Notification with filter.",
         "operationId": "DescribeNfs",
         "responses": {
           "200": {
@@ -182,9 +182,8 @@
     "pbCreateNfResponse": {
       "type": "object",
       "properties": {
-        "message": {
-          "type": "string",
-          "title": "google.protobuf.StringValue nf_post_id = 1;"
+        "nf_post_id": {
+          "type": "string"
         }
       }
     },
